--- a/src/main/java/com/iglnierod/gamearchive/view/game/GamePreviewPanel.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/game/GamePreviewPanel.form
@@ -92,7 +92,7 @@
     <Component class="javax.swing.JLabel" name="coverLabel">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/t_cover_small.jpg"/>
+          <Image iconType="3" name="/NoImgAvaliable.png"/>
         </Property>
       </Properties>
     </Component>
